[gd_scene load_steps=7 format=3 uid="uid://dd6pav8djr88p"]

[ext_resource type="Script" path="res://scenes/objects/logbook.gd" id="1_51412"]
[ext_resource type="Texture2D" uid="uid://7ijxtbigjolx" path="res://assets/objects/logbook.png" id="1_xfi5w"]
[ext_resource type="FontFile" uid="uid://028q5i0oh2j5" path="res://assets/fonts/VT323-Regular.ttf" id="2_1ag3s"]
[ext_resource type="Resource" uid="uid://lglp0x0h4jra" path="res://resources/logbook.tres" id="2_55ee6"]
[ext_resource type="Texture2D" uid="uid://dgiwrxa8in0n1" path="res://assets/ui/turn_arrow.png" id="3_1j56e"]
[ext_resource type="Texture2D" uid="uid://bpgty20m0oyj1" path="res://assets/ui/close.png" id="6_tvoc3"]

[node name="Logbook" type="CanvasLayer"]
layer = 2
script = ExtResource("1_51412")
content = ExtResource("2_55ee6")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("1_xfi5w")
centered = false

[node name="LeftPage" type="Control" parent="Sprite2D"]
layout_mode = 3
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Sprite2D/LeftPage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 45
theme_override_constants/margin_top = 35
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 35

[node name="VBoxContainer" type="VBoxContainer" parent="Sprite2D/LeftPage/MarginContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Sprite2D/LeftPage/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_1ag3s")
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "[u]Tag 1[/u]
Bin gut angekommen. Habe das Zelt aufgebaut, eine Feuerstelle eingerichtet und mich in der Umgebung umgeguckt. Scheinen einige Eisbären in der Gegend zu sein, also gibt es hier bestimmt auch reichlich Fisch. Und Robben?"
fit_content = true

[node name="RightPage" type="Control" parent="Sprite2D"]
layout_mode = 3
anchor_left = 0.53
anchor_right = 1.011
anchor_bottom = 1.0
offset_left = -7.66667
offset_right = -0.0666809
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Sprite2D/RightPage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 35
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 35

[node name="VBoxContainer" type="VBoxContainer" parent="Sprite2D/RightPage/MarginContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Sprite2D/RightPage/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_1ag3s")
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "[u]Tag 2[/u]
Habe einen Eisbärschädel gefunden. Tut mir ja leid um das schöne Tier, aber für mich ist das ein tolles Andenken. Werde ihn mit nach Hause nehmen. Die lebendigen Eisbären betrachten mich neugierig, aber bleiben auf Distanz. Kann so bleiben."
fit_content = true

[node name="RightContainer" type="MarginContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="NextArrow" type="TextureButton" parent="RightContainer"]
layout_mode = 2
texture_normal = ExtResource("3_1j56e")

[node name="LeftContainer" type="MarginContainer" parent="."]
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -162.0
offset_right = 195.0
grow_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="PrevArrow" type="TextureButton" parent="LeftContainer"]
layout_mode = 2
texture_normal = ExtResource("3_1j56e")
flip_h = true

[node name="CloseContainer" type="MarginContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20

[node name="CloseButton" type="TextureButton" parent="CloseContainer"]
layout_mode = 2
texture_normal = ExtResource("6_tvoc3")

[connection signal="pressed" from="RightContainer/NextArrow" to="." method="_on_next_arrow_pressed"]
[connection signal="pressed" from="LeftContainer/PrevArrow" to="." method="_on_prev_arrow_pressed"]
[connection signal="pressed" from="CloseContainer/CloseButton" to="." method="_on_close_button_pressed"]
